<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/view_common_title" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/account"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/accountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="@string/enter_account"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/nickname"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nickNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="@string/enter_nickname"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/security_question"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/questionEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="@string/enter_security_question"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/security_answer"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/answerEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="@string/enter_security_answer"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="Please enter your password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_password"
                android:textStyle="bold"
                android:textColor="#4E4F59"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/repasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="32dp"
                android:background="@color/touming"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#979797"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/line_color" />

        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/registBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_button"
        android:clickable="false"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white" />

</LinearLayout>