<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_button"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/home_click"/>
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/home_page"
                android:textColor="@color/mainText"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/collect_button"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/collect_unclick"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/collect_text"
                android:textColor="@color/bar_grey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/self_button"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/my_unclick"/>
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/myself"
                android:textColor="@color/bar_grey"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>